Add functionality to calculate BMI.

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
       <p>Enter your height and weight below, and select "Calculate BMI". Your BMI will appear below.</p>
       <form>
         <label>
-          <input type="number" min="0">Height (feet)
+          <input type="number" min="0" id="feet"> Height (feet)
         </label>
         <label>
-          <input type="number" min="0">Height (inches)
+          <input type="number" min="0" id="inches"> Height (inches)
         </label>
         <br>
         <br>
         <label>
-          <input type="number" min="0"> Weight (pounds)
+          <input type="number" min="0" id="pounds"> Weight (pounds)
         </label>
         <br>
         <br>
