Work-in-progress commit.

--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,17 @@
       <h2>What is body mass index?</h2>
       <p>Body mass index (BMI) is a measure of body fat based on a person's height and weight.</p>
       <p>Enter your height and weight below, and select "Calculate BMI". Your BMI will appear below.</p>
-      <form>
+      <form id="imperialSystem">
         <label>
-          <input type="number" min="0" id="feet"> Height (feet)
+          <input type="number" min="0" id="feet" required> Height (feet)
         </label>
         <label>
-          <input type="number" min="0" id="inches"> Height (inches)
+          <input type="number" min="0" id="inches" required> Height (inches)
         </label>
         <br>
         <br>
         <label>
-          <input type="number" min="0" id="pounds"> Weight (pounds)
+          <input type="number" min="0" id="pounds" required> Weight (pounds)
         </label>
         <br>
         <br>
