Update HTML for UI.

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
       <hr>
       <h2>What is body mass index?</h2>
       <p>Body mass index (BMI) is a measure of body fat based on a person's height and weight.</p>
-      <p>Enter your height and weight below, and select "Calculate BMI". Your BMI will appear below.</p>
       <p>To get started, select "Imperial System" or "Metric System", and click "Begin".</p>
+      <p>Enter your height and weight, and select "Calculate BMI". Your BMI will appear below.</p>
       <form id="chooseSystem">
         <input type="radio" name="choice" value="imperial" id="imperialBmi">
         <label for="imperialBmi">Imperial System</label>
@@ -18,7 +18,7 @@
         <input type="radio" name="choice" value="metric" id="metricBmi">
         <label for="metricBmi">Metric System</label>
         <br>
-        <button type="submit" class="btn-success" id="begin">Begin</button>
+        <button type="submit" class="btn-success" id="begin">Choose System</button>
       </form>
       <br>
       <div class="hidden" id="imperialDiv">
