Edit HTML for UI.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       <hr>
       <h2>What is body mass index?</h2>
       <p>Body mass index (BMI) is a measure of body fat based on a person's height and weight.</p>
-      <p>To get started, select "Imperial System" or "Metric System", and click "Begin".</p>
+      <p>To get started, select "Imperial System" or "Metric System", and click "Choose System".</p>
       <p>Enter your height and weight, and select "Calculate BMI". Your BMI will appear below.</p>
       <form id="chooseSystem">
         <input type="radio" name="choice" value="imperial" id="imperialBmi">
@@ -17,6 +17,7 @@
         <br>
         <input type="radio" name="choice" value="metric" id="metricBmi">
         <label for="metricBmi">Metric System</label>
+        <br>
         <br>
         <button type="submit" class="btn-success" id="begin">Choose System</button>
       </form>
