Add functionality to reset form for imperial system.

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
           <br>
           <br>
           <button type="submit" class="btn-success" id="calculateBmi">Calculate BMI</button>
+          <button type="reset" id="resetForm">Reset Form</button>
         </form>
         <br>
         <p id="showCalculationImperial"></p>
@@ -58,6 +59,7 @@
           <br>
           <br>
           <button type="submit" class="btn-success" id="calculateBmi">Calculate BMI</button>
+          <button type="reset" id="resetForm">Reset Form</button>
         </form>
         <br>
         <p id="showCalculationMetric"></p>
