Add functionality to hide previous BMI results after resetting forms.

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
             <input type="number" min="0" id="pounds" required> Weight (pounds)
           </label>
           <br>
+          <br>
           <p id="showCalculationImperial"></p>
           <br>
           <button type="submit" class="btn-success" id="calculateBmi">Calculate BMI</button>
@@ -57,10 +58,11 @@
             <input type="number" min="0" id="kilograms" required> Weight (kilograms)
           </label>
           <br>
+          <br>
           <p id="showCalculationMetric"></p>
           <br>
           <button type="submit" class="btn-success" id="calculateBmi">Calculate BMI</button>
-          <button type="reset" id="resetForm">Reset Form</button>
+          <button type="reset" id="resetButton">Reset Form</button>
         </form>
         <br>
       </div>
