Create basic table for BMI categories and add paragraphs to HTML.

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,36 @@
       <h1>Calculate Your Body Mass Index</h1>
       <hr>
       <h2>What is body mass index?</h2>
-      <p>Body mass index (BMI) is a measure of body fat based on a person's height and weight.</p>
+      <p>Body mass index (BMI) is a measure of body fat based on a person's height and weight. Listed below are the five BMI categories:</p>
+      <table>
+        <tr>
+          <th>BMI</th>
+          <th>Weight Status</th>
+        </tr>
+        <tr>
+          <td>Below 18.5</td>
+          <td>Underweight</td>
+        </tr>
+        <tr>
+          <td>18.5 - 24.9</td>
+          <td>Healthy Weight</td>
+        </tr>
+        <tr>
+          <td>25.0 - 29.9</td>
+          <td>Overweight</td>
+        </tr>
+        <tr>
+          <td>30 - 39.9</td>
+          <td>Obesity</td>
+        </tr>
+        <tr>
+          <td>40 or over</td>
+          <td>Severe Obesity</td>
+        </tr>
+      </table>
+      <br>
+      <p><strong>Please note</strong> that BMI does not account for all body types, muscle mass, or body fat percentage. For these reasons, BMI should not be considered an overall measure of a persons health. Please consult a doctor if you are concerned about your weight and/or physical health.</p>
+      <p>For example, a 6'3" 225 lb (190.5cm and 102.1 kg) professional baseball player would have a BMI of 28.1. Their BMI category would classify them as "overweight", despite their excellent physical fitness.</p>
       <p>To get started, select "Imperial System" or "Metric System", and click "Choose System".</p>
       <p>Enter your height and weight, and select "Calculate BMI". Your BMI will appear below.</p>
       <form id="chooseSystem">
