Edit paragraph for BMI description.

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         </tr>
       </table>
       <br>
-      <p><strong>Please note</strong> that BMI does not account for all body types, muscle mass, or body fat percentage. For example, a 6'3" 225 lb (190.5cm and 102.1 kg) professional baseball player would have a BMI of 28.1. Their BMI category would classify them as "overweight", despite their physical fitness and athletic ability.
+      <p><strong>Please note</strong> that BMI does not account for all body types, muscle mass, or body fat percentage. For example, a 6'3" 225 lb (190.5cm and 102.1 kg) professional baseball player with high muscle mass and low body fat would have a BMI of 28.1. Their BMI category would classify them as "overweight", despite their physical fitness and athletic ability.
       <p>For these reasons, BMI should not be considered a sole measure of a persons health. Please consult a doctor if you are concerned about your weight and/or physical health.</p>
       <p>To get started, select "Imperial System" or "Metric System", and click "Choose System".</p>
       <p>Enter your height and weight, and select "Calculate BMI". Your BMI will appear below.</p>
