Change BMI result DOM elements to h3.

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
           </label>
           <br>
           <br>
-          <p id="showCalculationImperial"></p>
+          <h3 id="showCalculationImperial"></h3>
           <br>
           <button type="submit" class="btn-success" id="calculateBmi">Calculate BMI</button>
           <button type="reset" id="resetForm">Reset Form</button>
@@ -90,7 +90,7 @@
           </label>
           <br>
           <br>
-          <p id="showCalculationMetric"></p>
+          <h3 id="showCalculationMetric"></h3>
           <br>
           <button type="submit" class="btn-success" id="calculateBmi">Calculate BMI</button>
           <button type="reset" id="resetButton">Reset Form</button>
